--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Natalee Cope</title>
+	<title>NataleeCope</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Natalee Cope's Portfolio</h1>
-    <img src="http://i.imgur.com/dRGR4te.png?1 " alt="Stock image of female">
-     <ul>
+	<h1>Natalee Cope</h1>
+<div>
+    <img src="http://i.imgur.com/dRGR4te.png?1 " alt="Stock image of female"></div>
+
+    <nav>
+     <ul class="links">
       <li><a href="#">About</a></li>
       <li><a href="#">My Work</a></li>
       <li><a href="https://www.linkedin.com/in/natalee-c/">Contact</a></li>
       </ul>
+      </nav>
 </body>
 </html>
